	* Added a 'SyLwrpClient::meterUpdate()' signal in
	'sy/sylwrp_client.cpp' and 'sy/sylwrp_client.h'.
	* Added an symetertest(1) program in 'tests/'.
2015-12-21 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyLwrpClient::silenceThreshold()',
	'SyLwrpClient::setSilenceThreshold()',
	'SyLwrpClient::silenceTimeout()', 'SyLwrpClient::setSilenceTimeout()',
	'SyLwrpClient::clipThreshold()', 'SyLwrpClient::setClipThreshold()',
	'SyLwrpClient::clipTimeout()' and 'SyLwrpClient::setClipTimeout()'
	methods in 'sy/sylwrp_client.cpp' and 'sy/sylwrpclient.h'.
	* Added 'SyLwrpClient::audioClipAlarm()' and
	'SyLwrpClient::AudioSilenceAlarm()' signals in 'sy/sylwrp_client.cpp'
	and 'sy/sylwrp_client.h'.
	* Added a 'StatusLight' class in 'tests/statuslight.cpp' and
	'tests/statuslight.h'.
2015-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyEndPoint' class in 'sy/syendpoint.cpp' and
	'sy/syendpoint.h'.
	* Removed 'SyLwrpClient::silenceThreshold()',
	'SyLwrpClient::setSilenceThreshold()',
	'SyLwrpClient::silenceTimeout()', 'SyLwrpClient::setSilenceTimeout()',
	'SyLwrpClient::clipThreshold()', 'SyLwrpClient::setClipThreshold()',
	'SyLwrpClient::clipTimeout()' and 'SyLwrpClient::setClipTimeout()'
	methods in 'sy/sylwrp_client.cpp' and 'sy/sylwrpclient.h'.
	* Added 'SyLwrpClient::setClipMonitor()' and
	'SyLwrpClient::setSilenceMonitor()' methods in
	methods in 'sy/sylwrp_client.cpp' and 'sy/sylwrpclient.h'.
2015-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SySource::label()' and 'SySource::setLabel()' methods in
	'sy/sysource.cpp' and 'sy/sysource.h'.
	* Added 'SyLwrpClient::srcLabel()' and 'SyLwrpClient::setSrcLabel()'
	methods in 'sy/sylwrp_client.cpp' and 'sy/sylwrpclient.h'.
2015-12-22 Fred Gleason <fredg@paravelsystems.com>
	* Added 'sy/syendpoint.h' to the 'include_HEADERS' rule in
	'sy/Makefile.am'.
2015-12-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 3:0:0.
	* Incremented the package version to 0.11.0.