@@ -413,3 +413,6 @@
 2015-12-30 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 3:0:0.
 	* Incremented the package version to 0.11.0.
+2016-03-10 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'sy/sylwrp_client.cpp' that threw a segfault when
+	a node disconnected.
